# Oriented_Topological_Maps_Framework

./: README.md
sharedFolderLinuxSemantic/sharedFolderLinuxSemantic/: actionsPolicy.txt  adjMatrixLeft.txt  adjMatrixRight.txt  corridorFastLin7Ang7.txt  corridorSlowLin3Ang3.txt  doorFastLin6Ang6.txt  doorSlowLin2Ang2.txt  leftList.txt  nextStatesPolicy.txt  rightList.txt  setupTest.txt  tempDeadLine.txt
src_semanticFullROS/src/: Running code  running test
src_semanticFullROS/src/add_noise_cmd_vel/: CMakeLists.txt  package.xml
src_semanticFullROS/src/add_noise_cmd_vel/src/: add_noise_cmd_vel_node.py
src_semanticFullROS/src/add_noise_compass/: CMakeLists.txt  package.xml
src_semanticFullROS/src/add_noise_compass/src/: add_noise_compass_node.py
src_semanticFullROS/src/calculate_trans_prob/: CMakeLists.txt  package.xml
src_semanticFullROS/src/calculate_trans_prob/launch/: runTest.launch
src_semanticFullROS/src/calculate_trans_prob/src/: calculate_trans_prob_node.cpp
src_semanticFullROS/src/calculate_trans_prob/worlds/: corridor.world  doorWorld.world
src_semanticFullROS/src/cmdp_solver/: CMakeLists.txt  package.xml
src_semanticFullROS/src/cmdp_solver/src/: cmdp_solver_node.cpp
src_semanticFullROS/src/cmdp_solver/srv/: solveCMDP.srv
src_semanticFullROS/src/collision_plugin/: CMakeLists.txt  package.xml
src_semanticFullROS/src/collision_plugin/include/collision_plugin/: ContactPlugin.hh
src_semanticFullROS/src/collision_plugin/src/: ContactPlugin.cc
src_semanticFullROS/src/create_topomap/: CMakeLists.txt  package.xml
src_semanticFullROS/src/create_topomap/msg/: logicalImage.msg
src_semanticFullROS/src/create_topomap/src/: create_topomap_node.cpp  (+7 more)
src_semanticFullROS/src/cross_door/: CMakeLists.txt  package.xml
src_semanticFullROS/src/data_analysis/: CMakeLists.txt  package.xml
src_semanticFullROS/src/direction_robot/: CMakeLists.txt  package.xml
src_semanticFullROS/src/go_corridor/: CMakeLists.txt  package.xml
src_semanticFullROS/src/logical_camera_plugin/: CMakeLists.txt  package.xml
src_semanticFullROS/src/logical_camera_plugin/include/logical_camera_plugin/: logical_camera_plugin.hh
src_semanticFullROS/src/logical_camera_plugin/launch/: main.launch  mainV0.launch
src_semanticFullROS/src/logical_camera_plugin/src/: logical_camera_plugin.cpp  p3at_tf_listener.cpp
src_semanticFullROS/src/logical_camera_plugin/worlds/: furnished_se1f1.world  logical_camera.world  se1f1 backup.world  se1f1.world  se1f1_10.world  se1f1_11.world  se1f1_11.worldBAKCUP  se1f1_12.world  se1f1_8.world  se1f1_9.world  se1f1_graph.world
src_semanticFullROS/src/maneuver_cross_door/: CMakeLists.txt  package.xml
src_semanticFullROS/src/maneuver_go_corridor/: CMakeLists.txt  package.xml
src_semanticFullROS/src/publish_collision/: CMakeLists.txt  package.xml
src_semanticFullROS/src/testing_semantic_cmdp/: CMakeLists.txt  package.xml
(+37 files in other folders)
